fix deleted some comented code and fix gap between timers hours

--- a/src/components/ExpTimer/ExpTimer.scss
+++ b/src/components/ExpTimer/ExpTimer.scss
@@ -24,18 +24,16 @@
     padding: 15px;
 
     &__little {
-        gap: 35px;
+        gap: 25px;
     }
 }
 
 .timer-numbers__item {
-    // min-width: 150px;
     padding: 0;
     display: flex;
     flex-direction: column;
     gap: 15px;
     color: #242424;
-    // background-color: rgba(255, 255, 255, 0.87);
     border-radius: 40px;
 
     &--dots {
@@ -44,7 +42,6 @@
     }
 
     p {
-        // padding: 100px 20px 100px 20px;
         display: flex;
         justify-content: center;
         align-items: center;
